--- a/index.html
+++ b/index.html
@@ -4,13 +4,28 @@
    <head>
       <meta charset = "UTF-8">
       <title>React App</title>
-      <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/css/foundation.min.css" integrity="sha256-itWEYdFWzZPBG78bJOOiQIn06QCgN/F0wMDcC4nOhxY=" crossorigin="anonymous" />
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"> -->
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
    </head>
 
    <body>
-     
-      <div id = "app"></div>
+     <div class="container-fluid navbar navbar-default navbar-fixed-top">
+       <div class="row">
+         <div class="col-md-12">
+           <div class="navbar-header">
+             <a href="#" class="navbar-brand">User Managemt</a>
+           </div>
+           <ul class="nav navbar-nav ">
+             <li class="active"><a href="#">Home</a></li>
+             <li><a href="#">Link</a></li>
+             <li><a href="#">Link</a></li>
+           </ul>
+         </div>
+      </div>
+    </div>
+      <main id = "app"></main>
       <script src = "index.js"></script>
    </body>
 
